syntax = "proto3";

option java_package = "com.pluralsight.protocolbuffers";
option java_outer_classname = "CustomerProtoBuf";

message CustomerPB {
    string first_name = 1;
    string last_name = 2;
    AddressPB address = 3;
}

message AddressPB {
    string address1 = 1;
    string address2 = 2;
    string city = 3;
    string state = 4;
    string zip_code = 5;
}